--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -1,10 +1,21 @@
-
+<%- layout('layouts/main.ejs') %>
+<div class="row">
 <form action="/signin" method="POST">
-    <input type="email" name="email" placeholder="Ingresar Email">
-    <input type="password" name="password" placeholder="Ingrese su clave">
+       
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email"  name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email">
+        <small id="emailHelp"  class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password"  name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
 
-    <button type="submit">
+    <button type="submit" class="btn btn-primary">
        Login
     </button>
 
 </form>
+</div>
