--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -22,7 +22,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <% if(user) { %>
 
